Reformat code (IntelliJ), fix checkstyle issues