@@ -1,24 +1,8 @@
 package com.inventage.portal.gateway.proxy.middleware.sessionBag;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
-
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-
 import com.inventage.portal.gateway.TestUtils;
 import com.inventage.portal.gateway.proxy.config.dynamic.DynamicConfiguration;
 import com.inventage.portal.gateway.proxy.middleware.proxy.ProxyMiddleware;
-
 import io.netty.handler.codec.http.cookie.ClientCookieDecoder;
 import io.vertx.core.Handler;
 import io.vertx.core.MultiMap;
@@ -40,6 +24,21 @@ import io.vertx.ext.web.sstore.SessionStore;
 import io.vertx.junit5.Checkpoint;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @ExtendWith(VertxExtension.class)
 public class SessionBagMiddlewareTest {
@@ -63,10 +62,10 @@ public class SessionBagMiddlewareTest {
             ctx.response().end();
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         });
     }
 
@@ -82,7 +81,8 @@ public class SessionBagMiddlewareTest {
             if (isFirstReq.get()) {
                 ctx.response().addCookie(cookie);
                 isFirstReq.set(false);
-            } else {
+            }
+            else {
                 testCtx.verify(() -> {
                     assertFalse(ctx.request().cookies(cookie.getName()).isEmpty(),
                             String.format("%s: Expected cookies to be included in follow up requests but was '%s'",
@@ -92,10 +92,10 @@ public class SessionBagMiddlewareTest {
             ctx.response().end();
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         });
     }
 
@@ -112,13 +112,14 @@ public class SessionBagMiddlewareTest {
             if (isFirstReq.get()) {
                 ctx.response().addCookie(cookie);
                 isFirstReq.set(false);
-            } else {
+            }
+            else {
                 ctx.response().addCookie(followUpCookie);
             }
             ctx.response().end();
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
                     new ArrayList<Cookie>(Arrays.asList(cookie, followUpCookie)));
@@ -138,13 +139,14 @@ public class SessionBagMiddlewareTest {
             if (isFirstReq.get()) {
                 ctx.response().addCookie(cookie);
                 isFirstReq.set(false);
-            } else {
+            }
+            else {
                 ctx.response().addCookie(expiredCookie);
             }
             ctx.response().end();
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(cookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(cookie)));
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp, new ArrayList<Cookie>());
         });
@@ -158,8 +160,8 @@ public class SessionBagMiddlewareTest {
         Cookie portalRealmCookie = Cookie.cookie("KEYCLOAK_SESSION", "foobar").setPath("/auth/realms/portal/")
                 .setMaxAge(3600);
         JsonArray whitelistedCookies = new JsonArray().add(new JsonObject()
-                .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_NAME, "KEYCLOAK_SESSION")
-                .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_PATH, "/auth/realms/master/"))
+                        .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_NAME, "KEYCLOAK_SESSION")
+                        .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_PATH, "/auth/realms/master/"))
                 .add(new JsonObject()
                         .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_NAME, "KEYCLOAK_SESSION")
                         .put(DynamicConfiguration.MIDDLEWARE_SESSION_BAG_WHITELISTED_COOKIE_PATH,
@@ -193,10 +195,10 @@ public class SessionBagMiddlewareTest {
             });
             // masterRealmCookie should not be saved in the session bag
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, whitelistedCookies, resp,
-                    new ArrayList<Cookie>(Arrays.asList()));
+                    new ArrayList<Cookie>(List.of()));
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, whitelistedCookies, resp,
-                    new ArrayList<Cookie>(Arrays.asList()));
+                    new ArrayList<Cookie>(List.of()));
         });
     }
 
@@ -213,12 +215,13 @@ public class SessionBagMiddlewareTest {
             if (isFirstReq.get()) {
                 ctx.response().addCookie(storedCookie);
                 isFirstReq.set(false);
-            } else {
+            }
+            else {
                 testCtx.verify(() -> {
                     for (Cookie cookie : ctx.request().cookies()) {
                         if (cookie.getName().equals("blub")) {
                             String cookieVal = cookie.getValue();
-                            assertTrue(cookieVal.equals("foo"), String.format(
+                            assertEquals("foo", cookieVal, String.format(
                                     "%s: Expected cookie value to be '%s' but was '%s'", errMsg, "foo", cookieVal));
                         }
                     }
@@ -227,17 +230,17 @@ public class SessionBagMiddlewareTest {
             ctx.response().end();
         }, null, resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(storedCookie)));
-        }, new ArrayList<Cookie>(Arrays.asList(reqCookie)), resp -> {
+                    new ArrayList<Cookie>(Collections.singletonList(storedCookie)));
+        }, new ArrayList<Cookie>(Collections.singletonList(reqCookie)), resp -> {
             expectedCookies(testCtx, errMsg, sessionStore, sessionId, new JsonArray(), resp,
-                    new ArrayList<Cookie>(Arrays.asList(storedCookie)));
+                    new ArrayList<Cookie>(Collections.singletonList(storedCookie)));
         });
 
     }
 
     void testHarness(Vertx vertx, VertxTestContext testCtx, SessionStore sessionStore, JsonArray whitelistedCookies,
-            Handler<RoutingContext> serverReqHandler, List<Cookie> reqCookies, Handler<HttpClientResponse> respHandler,
-            List<Cookie> followUpReqCookies, Handler<HttpClientResponse> followUpRespHandler) {
+                     Handler<RoutingContext> serverReqHandler, List<Cookie> reqCookies, Handler<HttpClientResponse> respHandler,
+                     List<Cookie> followUpReqCookies, Handler<HttpClientResponse> followUpRespHandler) {
         int port = TestUtils.findFreePort();
         int servicePort = TestUtils.findFreePort();
 
@@ -288,7 +291,7 @@ public class SessionBagMiddlewareTest {
                                     }
                                 }
                                 client.request(new RequestOptions().setMethod(HttpMethod.GET).setPort(port)
-                                        .setHost(host).setURI("").setHeaders(headers))
+                                                .setHost(host).setURI("").setHeaders(headers))
                                         .onComplete(testCtx.succeeding(followUpReq -> {
                                             followUpReq.send().onComplete(testCtx.succeeding(followUpResp -> {
                                                 followUpRespHandler.handle(followUpResp);
@@ -307,16 +310,16 @@ public class SessionBagMiddlewareTest {
      * b) no other cookies are returned to the user agent but the session cookie
      * c) all expectedSessionBagCookies are present in the session bag
      *
-     * @param testCtx test context
-     * @param errMsg error message
-     * @param sessionStore contains stored cookies
-     * @param sessionId session ID as returned in the session cookie
-     * @param resp response returned to the user agent
+     * @param testCtx                   test context
+     * @param errMsg                    error message
+     * @param sessionStore              contains stored cookies
+     * @param sessionId                 session ID as returned in the session cookie
+     * @param resp                      response returned to the user agent
      * @param expectedSessionBagCookies cookie expected to be stored in the session bag
      */
     void expectedCookies(VertxTestContext testCtx, String errMsg, SessionStore sessionStore,
-            AtomicReference<String> sessionId, JsonArray whitelistedCookies, HttpClientResponse resp,
-            List<Cookie> expectedSessionBagCookies) {
+                         AtomicReference<String> sessionId, JsonArray whitelistedCookies, HttpClientResponse resp,
+                         List<Cookie> expectedSessionBagCookies) {
         testCtx.verify(() -> {
             io.netty.handler.codec.http.cookie.Cookie sessionCookie = null;
             List<io.netty.handler.codec.http.cookie.Cookie> decodedRespCookies = new ArrayList<>();
